--- a/pages/selected/selected.html
+++ b/pages/selected/selected.html
@@ -39,16 +39,15 @@
         
         <div class="container-two">
           <p class="work-title">Service Status and Self Repair</p>
-          <p class="work-text">This service allows users to check their internet line and see the status, it alo provides tools for 'self repair'.
-            This very complex, multijurney project is backed by real customer and focus groups data. This was a huge milestone in our ability to 
-            support Customers using data to drive the diagnostics.
+          <p class="work-text">This service allows users to check their internet line and see the status, it also provides tools for 'self-repair'. This very complex, multi journey project is backed by real customer and focus groups data. This was a huge milestone in our ability to support Customers using data to drive the diagnostics.
+
           </p>
           <br>
           <div class="image-holder"><img src="../../img/work/repair-diagram.png" class="image"></div>
           <br>
 
-          <p class="work-text">The early stages of the project required mapping out all the possible scenarious and 
-            journeys our customers face when running diagnostics.
+          <p class="work-text">The early stages of the project required mapping out all the possible scenarios and journeys our customers face when running diagnostics.
+
             </p>
 
           <div class="image-holder"><img src="../../img/work/repair-1.png" class="image"></div>
