--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -71,9 +71,9 @@
 
           <div class="grey-background">
 
-              <p class="work-title">Our approach</p>
+              <p class="work-title-right">Our approach</p>
   
-              <p class="work-text">TalkTalk is a budget Internet Service Provider and we knew we will have to rely on 
+              <p class="work-text-right">TalkTalk is a budget Internet Service Provider and we knew we will have to rely on 
                 frameworks to keep the budget as low as possible. After extensive research and tests, we have decided 
                 to go with AngularJS and Bootstrap. Our vision was to treat TalkTalk's online products as independent 
                 Single Page Web Applications, supported by already established responsive framework re-styled with 
@@ -85,6 +85,32 @@
             </div>
 
             <div class="image-holder"><img src="../../img/talktalk/page-04.png" class="image"></div>
+
+            <div class="grey-background">
+
+              <p class="work-title">Prototyping</p>
+  
+              <p class="work-text">Building a responsive Single Page Web Application was an untrodden path at TalkTalk, 
+                this gave us technical and creative freedom to set principles and best practices in design and front-end 
+                implementation. We started from researching and defining UX and UI guidelines for each component we have 
+                set out to create for our prototype. This consisted of navigation, buttons, footer, general page styling, 
+                graphy and iconography. One of the requirements was to adhere to AA accessibility standards enabling 
+                screen readers and many other functionalities required for disabled users to be able to access the website. 
+              </p>
+              <br>
+
+              <p class="work-text">I have created cut-outs of all the components we wanted for our prototype in all 4 breaking 
+                points. This was handy when presenting the concept to the rest of the business. This allowed better understanding 
+                by interaction. Seeing how singular components stack into larger modules and then into pages allowed all involved 
+                to imagine how this would work in practice.  
+              </p>
+              <br>
+              
+            </div>
+
+            <div class="image-holder"><img src="../../img/talktalk/page-05.png" class="image"></div>
+
+
 
             <div class="image-holder"><img src="../../img/work/lib3.png" class="image"></div>
         </div>
