--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -110,9 +110,49 @@
 
             <div class="image-holder"><img src="../../img/talktalk/page-05.png" class="image"></div>
 
+            <div class="white-background">
+
+              <p class="work-title-right">The Design and Front-end stage</p>
+  
+              <p class="work-text-right">I have used Sketch as my main design tool. There were many advantages for using it. Sketch 
+                integrates allot of useful plugins created by ever growing community. It had great design library integration 
+                possibilities. The files unlike Photoshop were small in size thanks to vector graphics. With integrated pattern 
+                library, I was able to amend my designs with ease and almost instantaneously across all projects. Some examples below:
+              </p>
+              <br>
+
+              <div class="image-holder-small"><img src="../../img/work/baseline-headers.png" class="image"></div>
+
+            </div>
+
+            <div class="image-holder"><img src="../../img/talktalk/page-06.png" class="image"></div>
+
+            <div class="white-background">
+  
+              <p class="work-text">The Continuous sign-off process ensured we were able to move onto another component and make sure 
+                there's no surprises or major changes later in the project. 
+              </p>
+              <br>
+              <p class="work-text">In total, we have created 68 unique components that are 
+                  used today for building pages and customer journeys at TalkTalk. This library is constantly updated and improved. Each 
+                  component has its own dedicated page with UX and UI writ-up and a code snippet for developers. It allowed us to share 
+                  this library with our external partners and within many branches at TalkTalk.
+                </p>
+                <br>
+  
+            </div>
+
+            <div class="white-background">
+
+                <div class="image-holder-small"><img src="../../img/work/lib4.png" class="image"></div>
+                <div class="image-holder-small"><img src="../../img/work/lib3.png" class="image"></div>
+                <div class="image-holder-small"><img src="../../img/work/landing-talktalk.png" class="image"></div>
 
 
-            <div class="image-holder"><img src="../../img/work/lib3.png" class="image"></div>
+            </div>
+
+
+            
         </div>
 
       </div>
