--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -148,8 +148,9 @@
                 <div class="image-holder-small"><img src="../../img/work/lib3.png" class="image"></div>
                 <div class="image-holder-small"><img src="../../img/work/landing-talktalk.png" class="image"></div>
 
-
             </div>
+
+            <div class="image-holder"><img src="../../img/talktalk/page-07.png" class="image"></div>
 
 
             
