--- a/pages/jlr/jlr.html
+++ b/pages/jlr/jlr.html
@@ -16,7 +16,7 @@
 <body>
 
   <a href="../../index.html">
-    <img src="../../node_modules/octicons/build/svg/x.svg"class="close-button">
+    <svg xmlns="http://www.w3.org/2000/svg" class="close-button" width="40" height="40" viewBox="0 0 12 16"><path fill="#fff" d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"/></svg>
   </a>
 
   <div class="grid-container">
