alchmy images uploaded

--- a/pages/alchemy/alchemy.html
+++ b/pages/alchemy/alchemy.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
-  <link rel="stylesheet" href="jlr-style.css">
-  <link rel="stylesheet" href="jlr-grid.css">
+  <link rel="stylesheet" href="alchemy-style.css">
+  <link rel="stylesheet" href="alchemy-grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <title>pawel klasa</title>
 </head>
@@ -22,7 +22,7 @@
   <div class="grid-container">
 
       <div class="logo">
-          <div class="logo-text">Jaguar Land Rover</div>
+          <div class="logo-text">TalkTalk - Alchemy</div>
           <div class="senior">UX / UI</div>
       </div>
 
@@ -38,19 +38,16 @@
       <div class="grid-container-work">
         
         <div class="container-two">
-          <div class="image-holder-logo"><img src="../../img//jlr/logo.png" class="image"></div>
-          <p class="work-title">Parallax website</p>
-          <p class="work-text">Given a conceptual and technological freedom I  was able to create a narrative led website to recruit purchasing managers for Jaguar Land Rover... This unique parallax experience not only served as a job application gateway but also allowed the user a unique immersion while getting the feel for the role... 
-          </p>
+        
+          <div class="image-holder"><img src="../../img/alchemy/01.png" class="image"></div>
 
-          <div class="image-holder"><img src="../../img/work/jlr_01.png" class="image"></div>
-          <br>
+          <div class="image-holder"><img src="../../img/alchemy/02.png" class="image"></div>
 
-          <div class="image-holder"><img src="../../img/work/jlr_02.png" class="image"></div>
-          <br>
+          <div class="image-holder"><img src="../../img/alchemy/03.png" class="image"></div>
 
-          <div class="image-holder"><img src="../../img/work/jlr_03.png" class="image"></div>
-          <br>
+          <div class="image-holder"><img src="../../img/alchemy/04.png" class="image"></div>
+
+          <div class="image-holder"><img src="../../img/alchemy/05.png" class="image"></div>
 
         </div>
 
