--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         </div>
 
         <div class="hover three">
-          <a href="pages/gchq/gchq.html">
+          <a href="pages/alchemy/alchemy.html">
             <div class="hover-panel"></div>
-            <img src="img/gchq.png" class="responsive">
-            <p class="title">GCHQ</p>
+            <img src="img/alchemy.png" class="responsive">
+            <p class="title">TalkTalk - Alchemy</p>
           </a>
         </div>
 
