--- a/pages/alchemy/alchemy.html
+++ b/pages/alchemy/alchemy.html
@@ -41,11 +41,23 @@
         
           <div class="image-holder"><img src="../../img/alchemy/01.png" class="image"></div>
 
+          <p class="work-title">Parallax website</p>
+          <p class="work-text">Given a conceptual and technological freedom I  was able to create a narrative led website to recruit purchasing managers for Jaguar Land Rover... This unique parallax experience not only served as a job application gateway but also allowed the user a unique immersion while getting the feel for the role... 
+          </p>
+
           <div class="image-holder"><img src="../../img/alchemy/02.png" class="image"></div>
 
           <div class="image-holder"><img src="../../img/alchemy/03.png" class="image"></div>
 
+          <p class="work-title">Parallax website</p>
+          <p class="work-text">Given a conceptual and technological freedom I  was able to create a narrative led website to recruit purchasing managers for Jaguar Land Rover... This unique parallax experience not only served as a job application gateway but also allowed the user a unique immersion while getting the feel for the role... 
+          </p>
+
           <div class="image-holder"><img src="../../img/alchemy/04.png" class="image"></div>
+
+          <p class="work-title">Parallax website</p>
+          <p class="work-text">Given a conceptual and technological freedom I  was able to create a narrative led website to recruit purchasing managers for Jaguar Land Rover... This unique parallax experience not only served as a job application gateway but also allowed the user a unique immersion while getting the feel for the role... 
+          </p>
 
           <div class="image-holder"><img src="../../img/alchemy/05.png" class="image"></div>
 
