--- a/pages/alchemy/alchemy.html
+++ b/pages/alchemy/alchemy.html
@@ -40,6 +40,8 @@
         <div class="container-two">
         
           <div class="image-holder"><img src="../../img/alchemy/01.png" class="image"></div>
+          <br>
+          <br>
 
           <p class="work-title">Purpose</p>
           <p class="work-text">This project's aim was to improve customers experience in My Account 
@@ -47,7 +49,20 @@
             relevant information quickly and efficiently.
             It was created to increase customer engagement, offer values and relevant offer sale 
             prices, grow TalkTalk community but also reduce calls.
+          </p><br>
+
+          <p class="work-title">Brainstoriming and prototyping</p>
+          <p class="work-text">Given the creative freedom we were able to create new ways the customers interact with TalkTalk.
+            Our main goa was to integrate TalkTalk's main web applications (My Account, Help, Community) into one experience. 
+            A place where customers can find all the help TalkTalk provides. At this stage of the proces we sould start wireframing 
+            our ideas and creating basic user journeys.
+            We have set up a focus group where we could test and prove our ideas. 
           </p>
+          <br><br>
+
+          <div class="image-holder"><img src="../../img/alchemy/06.png" class="image"></div>
+
+          <div class="image-holder"><img src="../../img/alchemy/07.png" class="image"></div>
 
           <div class="image-holder"><img src="../../img/alchemy/02.png" class="image"></div>
 
