--- a/pages/alchemy/alchemy.html
+++ b/pages/alchemy/alchemy.html
@@ -45,16 +45,16 @@
 
           <p class="work-title">Purpose</p>
           <p class="work-text">This project's aim was to improve customers experience in My Account 
-            area but also comunity and Help section. Alchemy was designed to enable users to find 
+            area but also community and Help section. Alchemy was designed to enable users to find 
             relevant information quickly and efficiently.
             It was created to increase customer engagement, offer values and relevant offer sale 
             prices, grow TalkTalk community but also reduce calls.
           </p><br>
 
-          <p class="work-title">Brainstoriming and prototyping</p>
+          <p class="work-title">Brainstorming and prototyping</p>
           <p class="work-text">Given the creative freedom we were able to create new ways the customers interact with TalkTalk.
-            Our main goa was to integrate TalkTalk's main web applications (My Account, Help, Community) into one experience. 
-            A place where customers can find all the help TalkTalk provides. At this stage of the proces we sould start wireframing 
+            Our main goal was to integrate TalkTalk's main web applications (My Account, Help, Community) into one experience. 
+            A place where customers can find all the help TalkTalk provides. At this stage of the process we should start wire-framing 
             our ideas and creating basic user journeys.
             We have set up a focus group where we could test and prove our ideas. 
           </p>
