new 3 items and new fonts - main logo removed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="node_modules/primer-css/build/build.css">
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/grid.css">
@@ -17,8 +19,8 @@
   <div class="grid-container">
 
       <div class="logo">
-          <div class="image-holder"><img src="img/logo.png" class="brand"></div>
-          <div class="senior"><a href="pages/about/about.html">Digital Product</a> Designer from London</div>
+        <h1>Pawel Klasa</h1>
+        <div class="senior"><a href="pages/about/about.html">Digital Product</a> Designer from London</div>
       </div>
 
       <div class="moto">
@@ -74,6 +76,30 @@
         </div>
 
         <div class="hover six">
+          <a href="pages/selected/selected.html">
+            <div class="hover-panel"></div>
+            <img src="img/talk2.png" class="responsive">
+            <p class="title">TalkTalk - Selected projects</p>
+          </a>
+        </div>
+
+        <div class="hover seven">
+          <a href="pages/sky-plus/plus.html">
+            <div class="hover-panel"></div>
+            <img src="img/sky+.png" class="responsive">
+            <p class="title">British Sky Broadcasting</p> 
+          </a>
+        </div>
+
+        <div class="hover eight">
+          <a href="pages/btp/btp.html">
+            <div class="hover-panel"></div>
+            <img src="img/btp.png" class="responsive">
+            <p class="title">British Transport Police</p>
+          </a>
+        </div>
+
+        <div class="hover nine">
           <a href="pages/selected/selected.html">
             <div class="hover-panel"></div>
             <img src="img/talk2.png" class="responsive">
