--- a/pages/talktalk/talktalk.html
+++ b/pages/talktalk/talktalk.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="node_modules/primer-css/build/build.css">
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
   <link rel="stylesheet" href="tt-style.css">
   <link rel="stylesheet" href="tt-grid.css">
