--- a/pages/alchemy/alchemy.html
+++ b/pages/alchemy/alchemy.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="node_modules/octicons/build/octicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
   <link rel="stylesheet" href="alchemy-style.css">
   <link rel="stylesheet" href="alchemy-grid.css">
