tt-player created

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         </div>
 
         <div class="hover seven">
-          <a href="pages/sky-plus/plus.html">
+          <a href="pages/tt-player/tt-player.html">
             <div class="hover-panel"></div>
-            <img src="img/sky+.png" class="responsive">
-            <p class="title">British Sky Broadcasting</p> 
+            <img src="img/tt-player.png" class="responsive">
+            <p class="title">TalkTalk TV Player</p> 
           </a>
         </div>
 
