--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="hover eight">
           <a href="pages/btp/btp.html">
             <div class="hover-panel"></div>
-            <img src="img/btp.png" class="responsive">
-            <p class="title">British Transport Police</p>
+            <img src="img/louvre.png" class="responsive">
+            <p class="title">Louvre Hotels Group</p>
           </a>
         </div>
 
